# netfury

./: .env.example  .gitignore  README.md  benchmark_industria.csv  main.py  pyproject.toml  requirements.txt  settings.py
data/costs/: cost_tracking.parquet
data/processed/: benchmark_comparison.html  benchmark_industria.csv  benchmark_industria.json  benchmark_industria.parquet  benchmark_recursive_images_industria.csv  benchmark_recursive_images_industria.json  benchmark_recursive_images_industria.parquet  benchmark_summary.json  (+7 more)
docs/: BACKLOG_EJECUTIVO_V2.md  INDICE_MAESTRO_AR.md  MAPEO_NETFURY_VS_BENCHMARK360_V2.md  NEXT_STEPS.md  PROMPT_CONTEXTO_AR.md  RESUMEN_EJECUTIVO_AR.md  TASKS_SCRAPER.md  TASKS_WEB.md
extractors/: __init__.py  full_html_extractor.py  guardrails.py  html_extractor.py  image_extractor.py  llm_extractor.py  ocr_extractor.py  prompt_image.py  prompt_templates.py
llm/: __init__.py  base_client.py  budget.py  claude_client.py  cost_tracker.py  gemini_client.py  local_client.py  openai_client.py
notebooks/: benchmark_industria_notebook.ipynb  dashboard_estrategico.py  netfury_analysis.ipynb
ocr_url_json/: __init__.py  __main__.py  service.py
pipeline/: __init__.py  benchmark.py  benchmark_full.py  benchmark_recursive.py  benchmark_recursive_images.py  daily_worker.py  enhanced_runner.py  evaluator.py  parquet_writer.py  runner.py
schemas/: __init__.py  cost_tracking.py  plan.py
scraper/: base_spider.py  crawler.py  image_discoverer.py  main.py
scratch/: test_crawler.py
tests/: test_ocr_url_json.py  test_schemas.py
web/: app.py
(+33 files in other folders)
