[project]
name = "netfury"
version = "0.1.0"
description = "Comparador de precios de proveedores de internet (ISP) mediante web scraping y dashboard web"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "selenium>=4.15.0",
    "pandas>=2.1.0",
    "lxml>=4.9.0",
    "flask>=3.0.0",
    "python-dotenv>=1.0.0",
]
